; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_rdtgroup.c_rdtgroup_cbm_overlaps.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_rdtgroup.c_rdtgroup_cbm_overlaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdt_resource = type { i32 }
%struct.rdt_domain = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rdtgroup_cbm_overlaps(%struct.rdt_resource* %0, %struct.rdt_domain* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.rdt_resource*, align 8
  %8 = alloca %struct.rdt_domain*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.rdt_resource*, align 8
  %13 = alloca %struct.rdt_domain*, align 8
  store %struct.rdt_resource* %0, %struct.rdt_resource** %7, align 8
  store %struct.rdt_domain* %1, %struct.rdt_domain** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load %struct.rdt_resource*, %struct.rdt_resource** %7, align 8
  %15 = load %struct.rdt_domain*, %struct.rdt_domain** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @__rdtgroup_cbm_overlaps(%struct.rdt_resource* %14, %struct.rdt_domain* %15, i64 %16, i32 %17, i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %35

22:                                               ; preds = %5
  %23 = load %struct.rdt_resource*, %struct.rdt_resource** %7, align 8
  %24 = load %struct.rdt_domain*, %struct.rdt_domain** %8, align 8
  %25 = call i64 @rdt_cdp_peer_get(%struct.rdt_resource* %23, %struct.rdt_domain* %24, %struct.rdt_resource** %12, %struct.rdt_domain** %13)
  %26 = icmp slt i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  br label %35

28:                                               ; preds = %22
  %29 = load %struct.rdt_resource*, %struct.rdt_resource** %12, align 8
  %30 = load %struct.rdt_domain*, %struct.rdt_domain** %13, align 8
  %31 = load i64, i64* %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @__rdtgroup_cbm_overlaps(%struct.rdt_resource* %29, %struct.rdt_domain* %30, i64 %31, i32 %32, i32 %33)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %28, %27, %21
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @__rdtgroup_cbm_overlaps(%struct.rdt_resource*, %struct.rdt_domain*, i64, i32, i32) #1

declare dso_local i64 @rdt_cdp_peer_get(%struct.rdt_resource*, %struct.rdt_domain*, %struct.rdt_resource**, %struct.rdt_domain**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
